correct button alignment

--- a/src/css/modules/_join-in.scss
+++ b/src/css/modules/_join-in.scss
@@ -11,6 +11,7 @@
 .join-in__section {
     display: inline-block;
     width: 100%;
+    vertical-align: top;
     padding: 2em;
     margin: 0 auto;
 }
